# whisper-trainer

./: dataset.py  main.py  pyproject.toml  setup.sh
