[project]
name = "whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate<1.8.0",
    "datasets[audio]>=3.6.0",
    "evaluate>=0.4.3",
    "huggingface-hub>=0.33.0",
    "jiwer<4.0.0",
    "librosa>=0.11.0",
    "transformers>=4.52.4",
    "unsloth>=2025.6.2",
    "wandb>=0.20.1",
]
